@@ -1,3 +1,9 @@
+TAG: seqcacheload-tr9782-3
+DATE: 03/01/2010
+STAFF: sc
+CHANGES:
+1) TR9774 rep trans/prot algorithm update
+
 TAG: seqcacheload-tr9782-2
 TAG: seqcacheload-tr9782-1
 DATE: 02/24/2010
